--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,19 +1,89 @@
+@import 'bootstrap/scss/bootstrap';
+
+:root {
+  --viz-panel-height: 1080;
+  --svg-width: 512;
+  --svg-height: 600;
+  --svg-scale-factor: calc(var(--viz-panel-height) / var(--svg-height));
+}
+
 html,
-body,
-#model-source {
+body {
   width: 100%;
-  height: 100%;
+}
+
+#top-level-container {
+  display: flex;
+  & > #viz-panel {
+    z-index: -1;
+    flex-shrink: 0;
+    flex-grow: 0;
+    flex-basis: calc(1px * var(--svg-scale-factor) * var(--svg-width));
+    height: calc(1px * var(--viz-panel-height));
+    & > #model-viz-container {
+      width: calc(1px * var(--svg-width));
+      transform: scale(var(--svg-scale-factor));
+      transform-origin: top left;
+    }
+    & > #indices {
+      position: absolute;
+      width: calc(1px * var(--svg-scale-factor) * var(--svg-width));
+      bottom: 0px;
+      left: 0px;
+      font-size: xx-large;
+      padding: 1ex;
+      text-align: center;
+    }
+  }
+  & > #control-panel {
+    flex-grow: 1;
+    border-left: solid 1px;
+
+    & nav {
+      padding-top: 1ex;
+
+      & button[disabled] {
+        text-decoration: line-through;
+      }
+    }
+    & .tab-pane {
+      padding: 1em;
+    }
+
+    & #parameter-transforms {
+      display: flex;
+      gap: 2em;
+      & *:nth-child(1),
+      & *:nth-child(2) {
+        flex-grow: 0;
+      }
+      & *:last-child {
+        flex-grow: 3;
+        & input[type='text'],
+        & textarea {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
 #parameter-transforms {
-  & div {
+  & .active,
+  & .available {
     min-width: 100px;
     max-width: 200px;
     min-height: 20px;
     border: solid 1px;
+
+    & > div {
+      border: solid 1px;
+      margin: -1px;
+      padding: 0.2ex;
+    }
   }
 }
 
 input[type='range'] {
-  width: 300px;
+  width: 100%;
 }
