--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -68,6 +68,13 @@ body {
       & .available {
         overflow: scroll;
         max-height: 900px;
+
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        &::-webkit-scrollbar {
+          display: none;
+        }
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
       }
     }
   }
