--- a/src/scss/marker.scss
+++ b/src/scss/marker.scss
@@ -7,27 +7,31 @@
 
 .circle-128 {
   @extend .circle;
+
   width: 128px;
   height: 128px;
 }
 
 .circle-256 {
   @extend .circle;
+
   width: 256px;
   height: 256px;
 }
 
 .marker {
   @extend .circle-128;
-  background-color: rgba(0, 0, 255, 0.5);
+
+  background-color: rgb(0 0 255 / 50%);
 
   &.active {
-    background-color: rgba(0, 255, 0, 0.5);
+    background-color: rgb(0 255 0 / 50%);
   }
 }
 
 .slot {
   @extend .circle-256;
+
   border: solid 10px gray;
 
   &.active {
