--- a/src/scss/marker.scss
+++ b/src/scss/marker.scss
@@ -1,3 +1,15 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
+#panel {
+  position: relative;
+  width: 1920px;
+  height: 1080px;
+  background-color: #f0f0f0;
+}
+
 .circle {
   border-radius: 50%;
   position: absolute;
