--- a/src/scss/marker.scss
+++ b/src/scss/marker.scss
@@ -12,29 +12,29 @@ body {
   touch-action: none;
 }
 
-.circle {
+%circle {
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
   cursor: pointer;
 }
 
-.circle-128 {
-  @extend .circle;
+%circle-128 {
+  @extend %circle;
 
   width: 128px;
   height: 128px;
 }
 
-.circle-256 {
-  @extend .circle;
+%circle-256 {
+  @extend %circle;
 
   width: 256px;
   height: 256px;
 }
 
 .marker {
-  @extend .circle-128;
+  @extend %circle-128;
 
   background-color: rgb(0 0 255 / 50%);
 
@@ -53,7 +53,7 @@ body {
 }
 
 .slot {
-  @extend .circle-256;
+  @extend %circle-256;
 
   border: solid 10px gray;
 
