--- a/src/scss/marker.scss
+++ b/src/scss/marker.scss
@@ -1,14 +1,10 @@
-body {
-  margin: 0;
-  padding: 0;
-  overscroll-behavior: none;
-}
-
 .slot-panel {
-  position: relative;
+  position: absolute;
   width: 1920px;
   height: 1080px;
-  background-color: #f0f0f0;
+  top: 0;
+  left: 0;
+  background-color: #f0f0f077;
   touch-action: none;
 }
 
