--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,7 +9,11 @@
 
 html,
 body {
-  width: 100%;
+  width: 1920px;
+  height: 1080px;
+  margin: 0;
+  padding: 0;
+  overscroll-behavior: none;
 }
 
 #top-level-container {
