--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,10 +9,12 @@
 
 html,
 body {
+  position: absolute;
   width: 1920px;
   height: 1080px;
   margin: 0;
   padding: 0;
+  overflow: hidden;
   overscroll-behavior: none;
 }
 
