Scale the fixed size app to fit the viewport

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,12 +10,20 @@
 html,
 body {
   position: absolute;
-  width: 1920px;
-  height: 1080px;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   overscroll-behavior: none;
+}
+
+#fixed-size-container {
+  // The actual size is defined via code
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
 }
 
 #top-level-container {
