--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,9 @@
 @import 'bootstrap/scss/bootstrap';
 
 :root {
-  --viz-panel-height: 1080;
+  --app-width: 1920;
+  --app-height: 1080;
+  --viz-panel-height: var(--app-height);
   --svg-width: 512;
   --svg-height: 600;
   --svg-scale-factor: calc(var(--viz-panel-height) / var(--svg-height));
@@ -27,11 +29,17 @@ body {
 }
 
 #top-level-container {
-  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
   & > #viz-panel {
-    z-index: -1;
-    flex: 0 0 calc(1px * var(--svg-scale-factor) * var(--svg-width));
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: auto;
     height: calc(1px * var(--viz-panel-height));
 
     & > #model-viz-container {
@@ -52,8 +60,14 @@ body {
   }
 
   & > #control-panel {
-    flex-grow: 1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: calc(1px * var(--app-width) / 2);
+    height: 100%;
+    box-sizing: border-box;
     border-left: solid 1px;
+    background-color: white;
 
     & nav {
       padding-top: 1ex;
