--- a/src/scss/marker.scss
+++ b/src/scss/marker.scss
@@ -8,14 +8,14 @@
   touch-action: none;
 }
 
-@mixin circle($radius) {
+@mixin circle {
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
 }
 
 .marker {
-  @include circle(128px);
+  @include circle;
 
   cursor: pointer;
   background-color: rgb(0 0 255 / 50%);
@@ -35,9 +35,10 @@
 }
 
 .slot {
-  @include circle(256px);
+  @include circle;
 
-  border: solid 10px gray;
+  border: solid 0.5px gray;
+  box-sizing: content-box;
 
   &.active {
     border-color: green;
