--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,6 +35,15 @@ body {
   width: 100%;
   height: 100%;
 
+  & > #illustration-panel {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+  }
+
   & > #viz-panel {
     position: absolute;
     top: 0;
