--- a/src/scss/marker.scss
+++ b/src/scss/marker.scss
@@ -18,10 +18,10 @@
   @include circle;
 
   cursor: pointer;
-  background-color: rgb(0 0 255 / 50%);
+  background-color: rgb(211 211 211 / 50%);
 
   &.active {
-    background-color: rgb(0 255 0 / 50%);
+    background-color: rgb(55 175 218 / 50%);
   }
 
   * {
@@ -37,12 +37,13 @@
 .slot {
   @include circle;
 
-  border: solid 0.5px gray;
+  border: solid 3px #aaa;
+  background-color: #eee;
   box-sizing: content-box;
 
   &.active {
-    border-color: green;
-    background-color: red;
+    border-color: #37afda;
+    background-color: #a1d7ea;
   }
 
   * {
