--- a/src/scss/marker.scss
+++ b/src/scss/marker.scss
@@ -1,7 +1,7 @@
 .slot-panel {
   position: absolute;
-  width: 1920px;
-  height: 1080px;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   background-color: #f0f0f077;
@@ -32,12 +32,13 @@
   display: grid;
   place-items: center center;
   font-family: sans-serif;
+  font-size: x-large;
 }
 
 .slot {
   @include circle;
 
-  border: solid 3px #aaa;
+  border: solid 6px #aaa;
   background-color: #eee;
   box-sizing: content-box;
 
@@ -54,6 +55,6 @@
   display: grid;
   place-items: center center;
   font-family: sans-serif;
-  font-size: x-small;
+  font-size: x-large;
   text-align: center;
 }
