--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,29 +27,12 @@ body {
   overflow: hidden;
 }
 
-#top-level-container {
-  & > #illustration-panel {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-  }
-
-  & > #viz-panel {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    & > #model-viz-container {
-      width: calc(1px * var(--svg-width));
-      transform: scale(var(--svg-scale-factor));
-      transform-origin: top left;
-    }
-  }
+.fill {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .hidden {
