--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@ body {
   height: 100%;
   overflow: hidden;
   overscroll-behavior: none;
+  background-color: black;
 }
 
 #fixed-size-container {
