Make stock circles semi-transparent

--- a/src/scss/svg-viz.scss
+++ b/src/scss/svg-viz.scss
@@ -1,8 +1,10 @@
 svg.model-visualization {
   overflow: visible;
 
-  .stock {
+  .stock,
+  #phones-in-use {
     stroke: none;
+    opacity: 0.75;
 
     &.capacity {
       fill: gray;
