--- a/src/scss/svg-viz.scss
+++ b/src/scss/svg-viz.scss
@@ -43,6 +43,7 @@ svg.model-visualization {
     &.anim-edge {
       stroke-width: 15;
       stroke-dasharray: 10 27;
+      --max-dashoffset-step: 15; // string must be parseable by parseFloat()
     }
 
     &#recycle-flow,
@@ -63,6 +64,7 @@ svg.model-visualization {
 
       &.anim-edge {
         stroke-dasharray: 0 27;
+        --max-dashoffset-step: 12.5; // string must be parseable by parseFloat()
       }
     }
   }
