--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,12 +28,10 @@ body {
   overflow: hidden;
 }
 
-.fill {
+.abs-top-left {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
 }
 
 .hidden {
