--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,3 +29,13 @@ body {
 .hidden {
   display: none;
 }
+
+.primary-text {
+  font-family: 'Jost', sans-serif;
+  font-weight: 700;
+}
+
+.secondary-text {
+  font-family: 'Jost', sans-serif;
+  font-weight: 500;
+}
